stop img for light box appearing on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,10 @@ nav a:hover {
   color: #fff;
 }
 
+.overlay img{
+  display:none;
+}
+
 
 
 /***************************************************
